--- a/ajustes.html
+++ b/ajustes.html
@@ -294,8 +294,8 @@
 
             <label class="hintSmall" style="font-weight: 900">Dirección</label>
             <select id="settingsReviewDirection" class="select" style="min-width: 200px">
-              <option value="pl_es">PL ? ES</option>
-              <option value="es_pl">ES ? PL</option>
+              <option value="pl_es">PL &#x2192; ES</option>
+              <option value="es_pl">ES &#x2192; PL</option>
               <option value="mixed">Mixto</option>
             </select>
 
