--- a/flashcards.html
+++ b/flashcards.html
@@ -34,8 +34,8 @@
             <select id="fcLevel" class="select" style="min-width: 140px"></select>
             <select id="fcTopic" class="select" style="min-width: 220px"></select>
             <select id="fcDirection" class="select" style="min-width: 180px">
-              <option value="pl_es">PL ? ES</option>
-              <option value="es_pl">ES ? PL</option>
+              <option value="pl_es">PL &#x2192; ES</option>
+              <option value="es_pl">ES &#x2192; PL</option>
               <option value="mixed">Mixto</option>
             </select>
             <button class="btn-white-outline" id="fcReload" type="button">Cargar</button>
@@ -58,7 +58,7 @@
             <button class="btn-white-outline" id="fcFlip" type="button">Voltear</button>
             <button class="btn-white-outline" id="fcAudio" type="button">Escuchar PL</button>
             <button class="btn-white-outline" id="fcExampleAudio" type="button">Escuchar ejemplo</button>
-            <button class="btn-white-outline" id="fcFav" type="button">? Favorito</button>
+            <button class="btn-white-outline" id="fcFav" type="button">&#x2B50; Favorito</button>
             <button class="btn-white-outline" id="fcPrev" type="button">Anterior</button>
             <button class="btn-yellow" id="fcNext" type="button">Siguiente</button>
             <a class="btn-white-outline" href="espanel.html">Volver</a>
