--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
             <h3>Fundamentos de la vida en Polonia</h3>
             <p class="method-lead">Ideal para empezar tu vida en Polonia PL</p>
             <ul class="method-list">
-              <li><span class="check">?</span>Pronunciaci&oacute;n polaca para hispanohablantes</li>
-              <li><span class="check">?</span>Vocabulario esencial para la vida diaria</li>
-              <li><span class="check">?</span>Situaciones reales: trabajo, tienda, m&eacute;dico, transporte</li>
-              <li><span class="check">?</span>Gram&aacute;tica b&aacute;sica explicada paso a paso</li>
-              <li><span class="check">?</span>Audios y pr&aacute;ctica de conversaci&oacute;n desde el primer d&iacute;a</li>
+              <li><span class="check" aria-hidden="true"></span>Pronunciaci&oacute;n polaca para hispanohablantes</li>
+              <li><span class="check" aria-hidden="true"></span>Vocabulario esencial para la vida diaria</li>
+              <li><span class="check" aria-hidden="true"></span>Situaciones reales: trabajo, tienda, m&eacute;dico, transporte</li>
+              <li><span class="check" aria-hidden="true"></span>Gram&aacute;tica b&aacute;sica explicada paso a paso</li>
+              <li><span class="check" aria-hidden="true"></span>Audios y pr&aacute;ctica de conversaci&oacute;n desde el primer d&iacute;a</li>
             </ul>
           </article>
 
@@ -163,11 +163,11 @@
             <h3>Vida independiente en Polonia</h3>
             <p class="method-sub">Para trabajar, comunicarte y vivir con confianza</p>
             <ul class="method-list">
-              <li><span class="check">?</span>Conversaci&oacute;n fluida en situaciones cotidianas y profesionales</li>
-              <li><span class="check">?</span>Polaco para el trabajo, oficina y vida social</li>
-              <li><span class="check">?</span>Expresar opiniones, experiencias y emociones</li>
-              <li><span class="check">?</span>Vocabulario avanzado y estructuras naturales</li>
-              <li><span class="check">?</span>Preparaci&oacute;n pr&aacute;ctica para ex&aacute;menes y entrevistas</li>
+              <li><span class="check" aria-hidden="true"></span>Conversaci&oacute;n fluida en situaciones cotidianas y profesionales</li>
+              <li><span class="check" aria-hidden="true"></span>Polaco para el trabajo, oficina y vida social</li>
+              <li><span class="check" aria-hidden="true"></span>Expresar opiniones, experiencias y emociones</li>
+              <li><span class="check" aria-hidden="true"></span>Vocabulario avanzado y estructuras naturales</li>
+              <li><span class="check" aria-hidden="true"></span>Preparaci&oacute;n pr&aacute;ctica para ex&aacute;menes y entrevistas</li>
             </ul>
           </article>
 
@@ -177,11 +177,11 @@
             <h3>Integraci&oacute;n total</h3>
             <p class="method-sub">Para integrarte completamente y avanzar profesionalmente</p>
             <ul class="method-list">
-              <li><span class="check">?</span>Perfeccionamiento de la comunicaci&oacute;n oral y escrita</li>
-              <li><span class="check">?</span>Polaco profesional y acad&eacute;mico especializado</li>
-              <li><span class="check">?</span>Expresiones idiom&aacute;ticas y lenguaje natural</li>
-              <li><span class="check">?</span>Debates, negociaciones y situaciones formales</li>
-              <li><span class="check">?</span>Preparaci&oacute;n para ciudadan&iacute;a, ex&aacute;menes oficiales y trabajo avanzado</li>
+              <li><span class="check" aria-hidden="true"></span>Perfeccionamiento de la comunicaci&oacute;n oral y escrita</li>
+              <li><span class="check" aria-hidden="true"></span>Polaco profesional y acad&eacute;mico especializado</li>
+              <li><span class="check" aria-hidden="true"></span>Expresiones idiom&aacute;ticas y lenguaje natural</li>
+              <li><span class="check" aria-hidden="true"></span>Debates, negociaciones y situaciones formales</li>
+              <li><span class="check" aria-hidden="true"></span>Preparaci&oacute;n para ciudadan&iacute;a, ex&aacute;menes oficiales y trabajo avanzado</li>
             </ul>
           </article>
         </div>
