--- a/perfil.html
+++ b/perfil.html
@@ -272,7 +272,7 @@
                   <span id="publicBioLanguages"></span>
                 </div>
                 <div class="publicFact" id="publicInterestsWrap" style="display: none">
-                  <span class="publicFactIcon" aria-hidden="true">?</span>
+                  <span class="publicFactIcon" aria-hidden="true">&#x2728;</span>
                   <span id="publicBioInterests"></span>
                 </div>
               </div>
@@ -315,7 +315,7 @@
               <div class="statusTools">
                 <button class="statusChip" data-tag="estado" id="statusMood">Estado</button>
                 <select id="statusMinutes" class="select statusSelect">
-                  <option value="">? Aprendizaje</option>
+                  <option value="">&#x23F1; Aprendizaje</option>
                   <option value="5">5 min</option>
                   <option value="10">10 min</option>
                   <option value="15">15 min</option>
@@ -472,7 +472,7 @@
                   <div class="achievement-meta">Desbloqueadas</div>
                 </div>
                 <div class="achievement-card" data-achievement="dias">
-                  <div class="achievement-title">? Días de aprendizaje</div>
+                  <div class="achievement-title">&#x1F4C5; Días de aprendizaje</div>
                   <div class="achievement-value" id="rewardDays">0 días</div>
                   <div class="achievement-meta">Constancia</div>
                 </div>
