--- a/review.html
+++ b/review.html
@@ -71,7 +71,7 @@
               Escuchar ejemplo
             </button>
             <button class="btn-white-outline" id="btnFav" type="button">
-              ? Favorito
+              &#x2B50; Favorito
             </button>
             <button class="btn-yellow" id="btnCorrect" type="button" disabled>
               La sé
