--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
       <div class="container">
         <div class="heroBanner">
           <div class="heroTitleRow">
-            <div class="heroIcon">?</div>
+            <div class="heroIcon">&#x1F4B3;</div>
             <div>
               <h1 class="glow-text" style="margin: 0; font-size: 44px">
                 Servicios
@@ -39,7 +39,7 @@
 
         <div class="servicesTopGrid" id="servicesTop">
           <div class="card" id="checkoutCard">
-            <div class="sectionTitle" style="margin-top: 0">? Antes de comprar</div>
+            <div class="sectionTitle" style="margin-top: 0">&#x26A0; Antes de comprar</div>
 
             <div
               class="metaRow"
@@ -137,7 +137,7 @@
         </section>
 
         <section id="extras" class="services-section">
-          <h2 class="sectionTitle" style="margin-top: 0">? Extras</h2>
+          <h2 class="sectionTitle" style="margin-top: 0">&#x2728; Extras</h2>
           <div id="servicesExtrasGrid" class="services-grid"></div>
         </section>
 
