--- a/notificaciones.html
+++ b/notificaciones.html
@@ -30,14 +30,29 @@
         </section>
 
         <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">Actividad reciente</div>
-          <div class="muted">Aun no hay notificaciones.</div>
-          <div style="margin-top: 12px">
+          <div class="metaRow" style="margin-top: 0; justify-content: space-between; gap: 10px">
+            <div class="sectionTitle" style="margin-top: 0">Actividad reciente</div>
+            <div class="metaRow" style="gap: 10px; flex-wrap: wrap">
+              <button class="btn-white-outline" id="btnNotifMarkRead" type="button">
+                Marcar todo como leÃ­do
+              </button>
+            </div>
+          </div>
+
+          <div class="muted" id="notifHint">Cargando...</div>
+          <div id="notifList" class="inboxList" style="margin-top: 12px"></div>
+
+          <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
+            <button class="btn-white-outline" id="btnNotifMore" type="button" hidden>
+              Cargar mÃ¡s
+            </button>
             <a class="btn-yellow" href="espanel.html#notificaciones">Abrir en Libreta</a>
           </div>
         </section>
       </div>
     </main>
+
+    <script type="module" src="assets/js/pages/notificaciones-page.js"></script>
   </body>
 </html>
 
