--- a/admin-wizard.html
+++ b/admin-wizard.html
@@ -111,6 +111,10 @@
                 <input id="courseSlug" placeholder="miasto-i-miejsca" />
               </div>
               <div>
+                <label>Ikonka (emoji)</label>
+                <input id="courseIcon" placeholder="np. 🏙️" maxlength="16" />
+              </div>
+              <div>
                 <label>Typ</label>
                 <select id="courseType" class="select">
                   <option value="grammar">Gramatyka</option>
@@ -121,6 +125,10 @@
               <div>
                 <label>Kolejnosc (opcjonalnie)</label>
                 <input id="courseOrder" type="number" min="1" placeholder="auto" />
+              </div>
+              <div style="grid-column: 1 / -1">
+                <label>Obrazek (URL) (opcjonalnie)</label>
+                <input id="courseImageUrl" placeholder="https://... (najlepiej kwadrat 256×256)" />
               </div>
             </div>
             <div class="hintSmall" style="margin-top: 6px">
