--- a/perfil.html
+++ b/perfil.html
@@ -342,6 +342,7 @@
                 <button class="filterChip" type="button" data-feed-filter="pinned">Fijados</button>
                 <button class="filterChip" type="button" data-feed-filter="photos">Fotos</button>
                 <button class="filterChip" type="button" data-feed-filter="status">Estados</button>
+                <button class="filterChip" type="button" data-feed-filter="corrections">Correcciones</button>
               </div>
               <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
                 <input
