--- a/correcciones.html
+++ b/correcciones.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>Mis recompensas | AquiVivo</title>
+    <title>Correcciones | AquiVivo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
@@ -12,18 +12,18 @@
     <script src="assets/js/layout.js?v=20260208m" type="module"></script>
   </head>
 
-  <body data-page="recompensas">
+  <body data-page="correcciones">
     <div id="appHeader"></div>
 
     <main class="page">
       <div class="container">
         <section class="heroBanner heroBanner--review">
           <div class="heroTitleRow">
-            <div class="heroIcon">&#x1F6C2;</div>
+            <div class="heroIcon">&#x1F4AC;</div>
             <div>
-              <h1 class="glow-text" style="margin: 0">Pasaporte</h1>
+              <h1 class="glow-text" style="margin: 0">Correcciones</h1>
               <div class="subtitle" style="margin-top: 6px">
-                Gana sellos por completar unidades. Cada sello tiene una mini-misi&oacute;n.
+                Pide y da correcciones en la comunidad.
               </div>
             </div>
           </div>
@@ -32,36 +32,26 @@
         <section class="card" style="margin-top: 12px">
           <div class="metaRow" style="justify-content: space-between; gap: 10px; flex-wrap: wrap">
             <div>
-              <div class="sectionTitle" style="margin-top: 0">Sellos</div>
-              <div class="muted" id="passportHint">Cargando...</div>
+              <div class="sectionTitle" style="margin-top: 0">Solicitudes recientes</div>
+              <div class="muted" id="corrListHint">Cargando...</div>
             </div>
             <div class="metaRow" style="gap: 10px; flex-wrap: wrap">
-              <select id="passportLevel" class="select" style="min-width: 160px"></select>
               <a class="btn-white-outline" href="espanel.html" style="text-decoration: none">Volver</a>
             </div>
           </div>
 
-          <div id="passportGrid" class="passportGrid" style="margin-top: 12px"></div>
+          <div id="corrList" style="margin-top: 12px"></div>
+
+          <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
+            <button class="btn-white-outline" id="btnCorrMore" type="button" hidden>
+              Cargar m&aacute;s
+            </button>
+          </div>
         </section>
       </div>
     </main>
 
-    <div class="modalOverlay" id="stampModal" style="display: none">
-      <div class="modalCard" style="max-width: 720px">
-        <div class="modalHead">
-          <div class="modalTitle" id="stampModalTitle">Ciudad</div>
-          <button class="btn-white-outline" id="stampModalClose" type="button">
-            X
-          </button>
-        </div>
-        <div class="hr"></div>
-        <div id="stampModalBody"></div>
-      </div>
-    </div>
-
-    <script type="module" src="assets/js/pages/recompensas-page.js"></script>
+    <script type="module" src="assets/js/pages/correcciones-page.js"></script>
   </body>
 </html>
-
-
 
