--- a/ejercicio.html
+++ b/ejercicio.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
-    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260209a" />
+    <script src="assets/js/layout.js?v=20260209a" type="module"></script>
   </head>
 
   <body data-page="ejercicio">
