--- a/admin-wizard.html
+++ b/admin-wizard.html
@@ -28,6 +28,15 @@
           </div>
           <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
             <a class="btn-white-outline" href="esadmin.html">Panel admina</a>
+            <a class="btn-white-outline" href="import/a1-official-first-two.html" target="_blank" rel="noopener noreferrer">
+              Seed A1 (2 tematy)
+            </a>
+            <a class="btn-white-outline" href="import/a1-vocab-xlsx.html" target="_blank" rel="noopener noreferrer">
+              Import A1 vocab (.xlsx)
+            </a>
+            <a class="btn-white-outline" href="import/sample-a2-lessons.html" target="_blank" rel="noopener noreferrer">
+              Demo A2 (2 lekcje)
+            </a>
             <button class="btn-white-outline" id="btnGoExerciseAdminHeader" type="button">
               Dodaj cwiczenie
             </button>
