--- a/admin-wizard.html
+++ b/admin-wizard.html
@@ -132,6 +132,10 @@
                 </select>
               </div>
               <div>
+                <label>Sciezka / track (opcjonalnie)</label>
+                <input id="courseTrack" placeholder="np. latam" />
+              </div>
+              <div>
                 <label>Kolejnosc (opcjonalnie)</label>
                 <input id="courseOrder" type="number" min="1" placeholder="auto" />
               </div>
