--- a/flashcards.html
+++ b/flashcards.html
@@ -56,8 +56,8 @@
           </div>
           <div class="reviewActions">
             <button class="btn-white-outline" id="fcFlip" type="button">Voltear</button>
-            <button class="btn-white-outline" id="fcAudio" type="button">Escuchar PL</button>
-            <button class="btn-white-outline" id="fcExampleAudio" type="button">Escuchar ejemplo</button>
+            <button class="ttsIconBtn" id="fcAudio" type="button" title="Odsłuchaj (PL)" aria-label="Odsłuchaj (PL)">🔊</button>
+            <button class="ttsIconBtn" id="fcExampleAudio" type="button" title="Odsłuchaj przykład (PL)" aria-label="Odsłuchaj przykład (PL)">🔊</button>
             <button class="btn-white-outline" id="fcFav" type="button">&#x2B50; Favorito</button>
             <button class="btn-white-outline" id="fcPrev" type="button">Anterior</button>
             <button class="btn-yellow" id="fcNext" type="button">Siguiente</button>
