--- a/review.html
+++ b/review.html
@@ -64,12 +64,8 @@
             <button class="btn-white-outline" id="btnShowBack" type="button">
               Mostrar respuesta
             </button>
-            <button class="btn-white-outline" id="btnAudio" type="button">
-              Escuchar PL
-            </button>
-            <button class="btn-white-outline" id="btnExampleAudio" type="button">
-              Escuchar ejemplo
-            </button>
+            <button class="ttsIconBtn" id="btnAudio" type="button" title="Odsłuchaj (PL)" aria-label="Odsłuchaj (PL)">🔊</button>
+            <button class="ttsIconBtn" id="btnExampleAudio" type="button" title="Odsłuchaj przykład (PL)" aria-label="Odsłuchaj przykład (PL)">🔊</button>
             <button class="btn-white-outline" id="btnFav" type="button">
               &#x2B50; Favorito
             </button>
